java/step3/kubernetes/hello-world-route.yml
apiVersion: v1
kind: Route
metadata:
  name: hello-world
spec:
  host: hello-world-__PROJECT_NAME__.manawa.euw1-gcp-poc.adeo.cloud
  path: /
  to:
    kind: Service
    name: hello-world
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: hello-world-__PROJECT_NAME__.manawa.euw1-gcp-poc.adeo.cloud
    routerName: router
    wildcardPolicy: None
